# Elox

./: .gitignore  Cargo.toml  README.md  out.wasm  run_wasm.js  test.py
demos/: bigint.elox  dictionary.elox  fib.lox  hash_map.lox  linked_list.elox  linked_list.lox  lox.lox  math.elox  math.lox  mod_pow.elox  peasant_multiply.elox  primes.elox  primes.lox  prng.elox  string.lox  test.elox  test.lox  utils.lox
src/: bin.rs  elox.rs  lib.rs  lox.rs  main.rs
src/interpreter/: environment.rs  eval.rs  eval_result.rs  execute.rs  host.rs  lexical_scope.rs  lox_array.rs  lox_callable.rs  lox_class.rs  lox_function.rs  lox_instance.rs  mod.rs  natives.rs  value.rs
src/parser/: expressions.rs  mod.rs  parser_result.rs  pretty_printer.rs  statements.rs
src/runner/: interp.rs  mod.rs
src/scanner/: mod.rs  scanner_result.rs
src/vm/: chunk.rs  compiler.rs  instructions.rs  mod.rs  target.rs  wasm_module.rs
tests/arithmetic/: arithm.elox
tests/arrays/: index_outta_bounds.elox  length.elox  shorthand.elox
tests/branching/: for_loop.elox  if.elox  logical_operators.elox  while_loop.elox
tests/classes/: empty.elox  expect_superclass_name.elox  inherit.elox  inherit_class_only.elox  inherit_self.elox  init.elox  local_inherit_other.elox  super.elox  super_without_superclass.elox  this_outside_class.elox
tests/functions/: anonymous_func.elox  default_params.elox  natives.elox  recursive.elox  return_nil.elox  too_much_args.elox
web/: bootstrap.js  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js  worker.js
(+12 files in other folders)
