[package]
name = "elox"
version = "0.1.5"
authors = ["nathsou <nathsou@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "elox"
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/bin.rs"
name = "elox"

[dependencies]
fnv = "1.0.6"
wasm-bindgen = "0.2"

[profile.release]
debug = true